# lexica_inkplate_server

./: .gitignore  Cargo.toml  README.md
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/assets/: logo_design.afdesign
frontend/src/: main.rs
inkplate/: platformio.ini
inkplate/src/: battery.h  main.cpp  wifi_config.h
server/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
server/src/: dithering.rs  image_data.rs  lexica.rs  main.rs  my_curl.rs  posterity.rs
src/: dithering.rs  main.rs
