[package]
name = "lexica_inkframe_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
curl = { version = "0.4.44", default_features = false, features = ["rustls"] }
rand = "0.8.5"
scraper = "0.13.0"
serde_json = "1.0.85"
