[package]
name = "lexica-inkplate-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-net = "0.2.4"
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.2.1", features = ["fast-rng", "v4", "js"] }
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
yew = "0.19.3"
